--- a/views/index.html
+++ b/views/index.html
@@ -10,8 +10,10 @@
 </head>
 
 <body>
-    <h1>Welcome to horemow book reader web api</h1> <br/>
-    <p>This api is can be used in posting new books to our database</p>
+    <h1>Horemow book manager web api</h1> <br/>
+    <p>
+        This api is developed to manage the daily devotion, books and 
+        audio books content.
+    </p>
 </body>
-
 </html>
